added DebugMode in Orderbook

--- a/.env
+++ b/.env
@@ -15,6 +15,7 @@ HEDGE_GAP_PUT_USD=50
 HEDGE_INDEX_SRC=update
 HEDGE_HTTP_ADDR=127.0.0.1:7071
 HEDGE_DEBUG=1
+DATA_OB_DEBUG=1
 
 # Slippage buffer (bps)
 HEDGE_SLIP_OPEN_BPS=5    # e.g. 5 bps buffer for entry/net-credit checks
